@@ -15,3 +15,8 @@ verify_output output -f statefile logfile -T 4/10 'this is a test [0-9]' !'this 
 # Another variant that caused a crash
 cat logfile.2 >> logfile
 verify_output output.2 -an -f statefile logfile -T 1/0
+
+# Test that with consecutive "-T" flags, all but the last is ignored
+cp logfile.1 logfile
+reset_state_file statefile logfile
+verify_output /dev/null -f statefile logfile -T 1/1 -T 4/10 'this is a test [0-9]' !'this line does not match'
